fix(auth) correct google strategy and auth route
